--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
 <!--<img th:src="@{/car.jpg}"/>-->
 
 <div class="jumbotron">
-    <h1 class="display-3">Create a new user. Dat16i!!</h1>
+    <h1 class="display-3">Create a new user. Dat16j!!</h1>
     <p class="lead">This is a CRUD app made with Spring with DAT16J.</p>
     <hr class="my-4"/>
     <p>Fill the info for the new user.</p>
